# stdin-count-block-sigops

./: Cargo.toml  README.md  gather-sigops.sh
src/: main.rs
